fluxcd/infrastructure/configs/app-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: replace-desktops-prefix
spec:
  replacePath:
    path: /
