fluxcd/infrastructure/configs/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-replace-desktops-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 8080

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3001
          - path: /desktops
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3001
